syntax = "proto3";

package org.bookstore.bookstore_inventory.proto;

option java_multiple_files = true;
option java_package = "org.bookstore.bookstore_inventory.proto";
option java_outer_classname = "BookServiceProto";

import "google/protobuf/empty.proto";

message Book {
  int64 id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 quantity = 5;
}

service BookService {
  rpc AddBook(AddBookRequest) returns (Book) {}
  rpc UpdateBook(UpdateBookRequest) returns (google.protobuf.Empty) {}
  rpc DeleteBook(DeleteBookRequest) returns (google.protobuf.Empty) {}
  rpc GetBook(GetBookRequest) returns (Book) {}
}

message AddBookRequest {
  string title = 1;
  string author = 2;
  string isbn = 3;
  int32 quantity = 4;
}

message UpdateBookRequest {
  int64 id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 quantity = 5;
}

message DeleteBookRequest {
  int64 id = 1;
}

message GetBookRequest {
  int64 id = 1;
}
